<resources>
    <string name="app_name">Lucapp</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="lucapp_image">LucApp image</string>
    <string name="good_morning">Good Morning</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="border">|</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_appoint">Click to Appoint</string>
    <string name="name">Name</string>
    <string name="date">12/12/1990</string>
    <string name="choose_gender">Gender</string>
    <string name="personal_details">Personal Details</string>
    <string name="Address">Address</string>
    <string name="house_number">House No.</string>
    <string name="street_number">Street Number</string>
    <string name="choose_country">Country</string>
    <string name="choose_city">City</string>
    <string name="contact_number">Contact Number</string>
    <string name="update">Update</string>
    <string name="page_title">Title</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="about_me">About Me</string>
    <string name="working_time">Availability</string>
    <string name="reviews">Reviews</string>
    <string name="appoint">Make an Appointment</string>
    <string name="book_doctor">Book Doctor</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="choose_time">Select time</string>
    <string name="next">Next</string>
    <string name="medical_report">Medical Reports</string>
    <string name="report_id">Report ID:</string>
    <string name="patient_name">Patient Name</string>
    <string name="doc_name">Doctor Name</string>
    <string name="report_description">Description</string>
    <string name="report_image">Attached Image</string>
    <string name="generation_date">Date:</string>
    <string name="generation_time">Time:</string>
    <string name="download">Download</string>
    <string name="search_medicines">Search Medicines</string>
    <string name="medication_details">Medicine Details</string>
    <string name="medication_timing">Medicine Timing</string>
    <string name="medication_name">Name</string>
    <string name="medication_grams">Total Grams</string>
    <string name="medication_start_date">Start Date</string>
    <string name="medication_end_date">End Date</string>
    <string name="timing">Time</string>
    <string name="set_an_alarm">Add</string>
    <string name="cancel_an_alarm">Cancel</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_link">Don\'t have an account?</string>
    <string name="appointment_id">Appointment ID</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="patient_id">Patient ID</string>
    <string name="time">Time</string>
    <string name="appointment_date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="appoint_doctor">Appoint Doctor</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="rating">Rating</string>
    <string name="see_all_reviews">See All Reviews</string>
    <string name="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc sit amet aliquam lacinia, nunc nisl aliquam nisl, eget aliquam nisl nisl sit amet nisl. Sed euismod, nunc sit amet aliquam lacinia, nunc nisl aliquam nisl, eget aliquam nisl nisl sit amet nisl.</string>
    <string name="messaging">Message</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="canceled">Canceled</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="completed">Completed</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_contact">Enter Contact Details</string>
    <string name="enter_name">Enter your name</string>
    <string name="upload_picture">Upload Image</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter your age</string>
    <string name="search_reports">Search reports</string>
    <string name="doctorsData">Doctors</string>
    <string name="reports">Reports</string>
    <string name="frequency">Frequency</string>
    <string name="days">days</string>
    <string name="dosage">Dosage</string>
    <string name="add_alarm">Add alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="by_default_selection">By default selection</string>
    <string name="frequency_meaning">Frequency means for how many days you will take medicine</string>
    <string name="dosage_meaning">Dosage means how many times per day you will take medicine</string>
    <string name="default_point_1">By default, the alarm is set according to the Frequency and Dosage of the medicine</string>
    <string name="default_point_2">By default dosage medicine timings are 6 am, 12 pm and 6 pm</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="enter_6_digit_code">Enter 6-Digit Code</string>
    <string name="verification_code_box">Verification Code Box</string>
    <string name="resend_code">Please enter the OTP sent on your verified email</string>
    <string name="instructions">Enter the 6-digit OTP sent to </string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="gender">Gender</string>
    <string name="confirm_appointment">Confirm appointment</string>
    <string name="appointment_instructions">Below are the details of your appointment. Check the details carefully and confirm your appointment.</string>
    <string name="confirm">Confirm</string>
    <string name="click_to_view_reason_for_cancellation">Click to view reason for cancellation</string>
    <string name="contact_doctor">Contact Doctor</string>
</resources>