<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/by_default_selection"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/frequency_meaning"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/dot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/dosage_meaning"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/dot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/default_point_1"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/dot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/default_point_2"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/dot" />



</LinearLayout>


