<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/gender" />


    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:paddingTop="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/style_radiogrp_bg"
            android:text="@string/male"
            android:fontFamily="@font/poppins_light"
            app:useMaterialThemeColors="true" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:layout_weight="0.5"
            android:paddingTop="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/style_radiogrp_bg"
            android:text="@string/female"
            app:useMaterialThemeColors="true" />

    </RadioGroup>


</LinearLayout>
