<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:text="@string/confirm_appointment"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="start"
        android:text="@string/appointment_instructions"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_background"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmAppointmentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:padding="5dp"
            android:textSize="18sp"

            android:layout_marginBottom="20dp"
            android:fontFeatureSettings="15dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/confirmAppointment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@xml/button_background"
            android:text="@string/confirm"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/cancelAppointment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:src="@drawable/cancel" />


    </LinearLayout>


</LinearLayout>