<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/account_foreground"
                app:civ_border_color="@color/round"
                app:civ_border_overlay="true"
                app:civ_border_width="0.7dp" />
        </FrameLayout>


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:background="@xml/button_background"
                android:drawableEnd="@drawable/upload_foreground"
                android:fontFamily="@font/poppins_light"
                android:gravity="start|center_vertical"
                android:text="@string/upload_picture"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/enter_age"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@xml/edit_text"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.fyp.lucapp.Components.ComponentLoader
            android:id="@+id/fpComponentLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:background="@xml/button_background"
            android:drawableEnd="@drawable/right_arrow_foreground"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start|center_vertical"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </FrameLayout>


</LinearLayout>